compiler2/src/Flask/FlaskPythonParser.java
// Generated from C:/Users/elaf3/Downloads/38833FF26BA1D.UnigramPreview_g9c9v27vpyspw!App/compiler003/compiler2/src/Flask/FlaskPythonParser.g4 by ANTLR 4.13.2
package Flask;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FlaskPythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, FROM=3, IMPORT=4, DEF=5, RETURN=6, PASS=7, IF=8, ELSE=9, 
		FOR=10, WHILE=11, IN=12, IS=13, NOT=14, NONE=15, TRUE=16, FALSE=17, GLOBAL=18, 
		DOT=19, APP_ROUTE=20, STRING=21, NUMBER=22, ID=23, LTEQ=24, GTEQ=25, MINUS=26, 
		STAR=27, MOD=28, EQEQ=29, NEQ=30, EQ=31, PLUS=32, COMMA=33, COLON=34, 
		LPAREN=35, RPAREN=36, LBRACKET=37, RBRACKET=38, LBRACE=39, RBRACE=40, 
		ARROW=41, LT=42, GT=43, SLASH=44, PLUSEQ=45, MINUSEQ=46, STAREQ=47, SLASHEQ=48, 
		MODEQ=49, DOUBLESLASHEQ=50, DOUBLESTAREQ=51, PIPE=52, AMP=53, CARET=54, 
		TILDE=55, AND=56, OR=57, DOUBLESTAR=58, DOUBLESLASH=59, NEWLINE=60, WS=61;
	public static final int
		RULE_program = 0, RULE_stmt = 1, RULE_globalStmt = 2, RULE_augAssign = 3, 
		RULE_augOp = 4, RULE_importStmt = 5, RULE_importList = 6, RULE_varAssign = 7, 
		RULE_decoratorFunc = 8, RULE_funcDef = 9, RULE_paramList = 10, RULE_block = 11, 
		RULE_ifStmt = 12, RULE_forStmt = 13, RULE_whileStmt = 14, RULE_returnValues = 15, 
		RULE_expr = 16, RULE_sliceOrIndex = 17, RULE_dottedID = 18, RULE_argList = 19, 
		RULE_argument = 20, RULE_tupleLiteral = 21, RULE_generatorExpr = 22, RULE_listLiteral = 23, 
		RULE_dictLiteral = 24, RULE_dictItem = 25, RULE_exprStmt = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stmt", "globalStmt", "augAssign", "augOp", "importStmt", 
			"importList", "varAssign", "decoratorFunc", "funcDef", "paramList", "block", 
			"ifStmt", "forStmt", "whileStmt", "returnValues", "expr", "sliceOrIndex", 
			"dottedID", "argList", "argument", "tupleLiteral", "generatorExpr", "listLiteral", 
			"dictLiteral", "dictItem", "exprStmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'from'", "'import'", "'def'", "'return'", "'pass'", 
			"'if'", "'else'", "'for'", "'while'", "'in'", "'is'", "'not'", "'None'", 
			"'True'", "'False'", "'global'", "'.'", "'@app.route'", null, null, null, 
			"'<='", "'>='", "'-'", "'*'", "'%'", "'=='", "'!='", "'='", "'+'", "','", 
			"':'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'->'", "'<'", "'>'", 
			"'/'", "'+='", "'-='", "'*='", "'/='", "'%='", "'//='", "'**='", "'|'", 
			"'&'", "'^'", "'~'", "'and'", "'or'", "'**'", "'//'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "FROM", "IMPORT", "DEF", "RETURN", "PASS", 
			"IF", "ELSE", "FOR", "WHILE", "IN", "IS", "NOT", "NONE", "TRUE", "FALSE", 
			"GLOBAL", "DOT", "APP_ROUTE", "STRING", "NUMBER", "ID", "LTEQ", "GTEQ", 
			"MINUS", "STAR", "MOD", "EQEQ", "NEQ", "EQ", "PLUS", "COMMA", "COLON", 
			"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "ARROW", 
			"LT", "GT", "SLASH", "PLUSEQ", "MINUSEQ", "STAREQ", "SLASHEQ", "MODEQ", 
			"DOUBLESLASHEQ", "DOUBLESTAREQ", "PIPE", "AMP", "CARET", "TILDE", "AND", 
			"OR", "DOUBLESTAR", "DOUBLESLASH", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FlaskPythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlaskPythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FlaskPythonParser.EOF, 0); }
		public TerminalNode NEWLINE() { return getToken(FlaskPythonParser.NEWLINE, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(54);
				match(NEWLINE);
				}
				break;
			}
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1152922226177592776L) != 0)) {
				{
				{
				setState(57);
				stmt();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(FlaskPythonParser.NEWLINE, 0); }
		public VarAssignContext varAssign() {
			return getRuleContext(VarAssignContext.class,0);
		}
		public AugAssignContext augAssign() {
			return getRuleContext(AugAssignContext.class,0);
		}
		public DecoratorFuncContext decoratorFunc() {
			return getRuleContext(DecoratorFuncContext.class,0);
		}
		public GlobalStmtContext globalStmt() {
			return getRuleContext(GlobalStmtContext.class,0);
		}
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(FlaskPythonParser.RETURN, 0); }
		public ReturnValuesContext returnValues() {
			return getRuleContext(ReturnValuesContext.class,0);
		}
		public TerminalNode PASS() { return getToken(FlaskPythonParser.PASS, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				importStmt();
				setState(67);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(66);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(69);
				varAssign();
				setState(71);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(70);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				augAssign();
				setState(75);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(74);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(77);
				decoratorFunc();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(78);
				globalStmt();
				setState(80);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(79);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(82);
				exprStmt();
				setState(84);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(83);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(86);
				ifStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(87);
				forStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(88);
				whileStmt();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(89);
				match(RETURN);
				setState(91);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(90);
					returnValues();
					}
					break;
				}
				setState(94);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(93);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(96);
				match(PASS);
				setState(98);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(97);
					match(NEWLINE);
					}
					break;
				}
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(100);
				match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalStmtContext extends ParserRuleContext {
		public TerminalNode GLOBAL() { return getToken(FlaskPythonParser.GLOBAL, 0); }
		public List<TerminalNode> ID() { return getTokens(FlaskPythonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FlaskPythonParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FlaskPythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FlaskPythonParser.COMMA, i);
		}
		public GlobalStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterGlobalStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitGlobalStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitGlobalStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalStmtContext globalStmt() throws RecognitionException {
		GlobalStmtContext _localctx = new GlobalStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(GLOBAL);
			setState(104);
			match(ID);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(105);
				match(COMMA);
				setState(106);
				match(ID);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AugAssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FlaskPythonParser.ID, 0); }
		public AugOpContext augOp() {
			return getRuleContext(AugOpContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AugAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_augAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterAugAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitAugAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitAugAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AugAssignContext augAssign() throws RecognitionException {
		AugAssignContext _localctx = new AugAssignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_augAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(ID);
			setState(113);
			augOp();
			setState(114);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AugOpContext extends ParserRuleContext {
		public TerminalNode PLUSEQ() { return getToken(FlaskPythonParser.PLUSEQ, 0); }
		public TerminalNode MINUSEQ() { return getToken(FlaskPythonParser.MINUSEQ, 0); }
		public TerminalNode STAREQ() { return getToken(FlaskPythonParser.STAREQ, 0); }
		public TerminalNode SLASHEQ() { return getToken(FlaskPythonParser.SLASHEQ, 0); }
		public TerminalNode MODEQ() { return getToken(FlaskPythonParser.MODEQ, 0); }
		public TerminalNode DOUBLESLASHEQ() { return getToken(FlaskPythonParser.DOUBLESLASHEQ, 0); }
		public TerminalNode DOUBLESTAREQ() { return getToken(FlaskPythonParser.DOUBLESTAREQ, 0); }
		public AugOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_augOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterAugOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitAugOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitAugOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AugOpContext augOp() throws RecognitionException {
		AugOpContext _localctx = new AugOpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_augOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 4468415255281664L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(FlaskPythonParser.FROM, 0); }
		public TerminalNode ID() { return getToken(FlaskPythonParser.ID, 0); }
		public TerminalNode IMPORT() { return getToken(FlaskPythonParser.IMPORT, 0); }
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_importStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(FROM);
			setState(119);
			match(ID);
			setState(120);
			match(IMPORT);
			setState(121);
			importList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(FlaskPythonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FlaskPythonParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FlaskPythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FlaskPythonParser.COMMA, i);
		}
		public ImportListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterImportList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitImportList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitImportList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportListContext importList() throws RecognitionException {
		ImportListContext _localctx = new ImportListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_importList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(ID);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(124);
				match(COMMA);
				setState(125);
				match(ID);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarAssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FlaskPythonParser.ID, 0); }
		public TerminalNode EQ() { return getToken(FlaskPythonParser.EQ, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VarAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitVarAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitVarAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarAssignContext varAssign() throws RecognitionException {
		VarAssignContext _localctx = new VarAssignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(ID);
			setState(132);
			match(EQ);
			setState(133);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorFuncContext extends ParserRuleContext {
		public TerminalNode APP_ROUTE() { return getToken(FlaskPythonParser.APP_ROUTE, 0); }
		public TerminalNode LPAREN() { return getToken(FlaskPythonParser.LPAREN, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(FlaskPythonParser.RPAREN, 0); }
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(FlaskPythonParser.NEWLINE, 0); }
		public DecoratorFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decoratorFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).enterDecoratorFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskPythonParserListener ) ((FlaskPythonParserListener)listener).exitDecoratorFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskPythonParserVisitor ) return ((FlaskPythonParserVisitor<? extends T>)visitor).visitDecoratorFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorFuncContext decoratorFunc() throws RecognitionException {
		DecoratorFuncContext _localctx = new DecoratorFuncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_decoratorFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(APP_ROUTE);
			setState(136);
			match(LPAREN);
			setState(137);
			argList();
			setState(138);
			match(RPAREN);
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(139);
				match(NEWLINE);
				}
			}

			setState(142);
			funcDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
